[workspace]
resolver = "2"
members = [
  "rustler",
  "rustler_codegen",
  "rustler_tests/native/binary_example",
  "rustler_tests/native/rustler_test",
  "rustler_tests/native/rustler_bigint_test",
  "rustler_tests/native/rustler_serde_test",
  "rustler_tests/native/dynamic_load",
  "rustler_tests/native/rustler_compile_tests",
  "rustler_tests/native/resource_dyncall",
  "rustler_benchmarks/native/benchmark",
]
default-members = [
  "rustler",
  "rustler_codegen",
]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

