[package]
name = "rustler_codegen"
description = "Compiler plugin for Rustler"
repository = "https://github.com/rusterlium/rustler/tree/master/rustler_codegen"
version = "0.32.1" # rustler_codegen version
authors = ["Hansihe <hansihe@hansihe.com>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
edition = "2021"

[lib]
name = "rustler_codegen"
proc_macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
heck = "0.5"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
