[package]
name = "rustler_sys"
version = "0.6.6-alpha.0"
authors = ["Daniel Goertzen <daniel.goertzen@gmail.com>"]
description = "Create Erlang NIF modules in Rust using the C NIF API."
documentation = "https://docs.rs/rustler_sys"
repository = "https://github.com/rusterlium/rustler"
license = "MIT/Apache-2.0"
keywords = ["FFI", "Erlang", "NIF"]
edition = "2018"

build = "build.rs"

categories = ["external-ffi-bindings"]

[dependencies]
unreachable = "0.1"
