[package]
name = "rustler_sys"

# In order to ensure no breakage occurs for depending
# crates, Semver is used in a non-standard way for
# this crate.
#
# The MAJOR version of this crate represents the
# major version of the NIF api.
# The following versions are defined:
# 0: ^0 (0.1)
# 1: ^1 (1.0)
# 2: ^2 (2.0, 2.1, 2.2, etc)
#
# The MINOR version of this crate represents breaking
# changes in the API of the crate.
#
# The PATCH version is as standard.
#
# When depending on this crate, you should ALWAYS
# use a tilde requirements with AT LEAST `~MAJOR.MINOR`.
# Example: "~2.0"
version = "2.2.1"

authors = ["Daniel Goertzen <daniel.goertzen@gmail.com>"]
description = "Create Erlang NIF modules in Rust using the C NIF API."
documentation = "https://docs.rs/rustler_sys"
repository = "https://github.com/rusterlium/rustler"
license = "MIT/Apache-2.0"
keywords = ["FFI", "Erlang", "NIF"]
edition = "2018"

build = "build.rs"

categories = ["external-ffi-bindings"]

[features]
default = ["nif_version_2_15"]
nif_version_2_14 = []
nif_version_2_15 = ["nif_version_2_14"]
nif_version_2_16 = ["nif_version_2_15"]
nif_version_2_17 = ["nif_version_2_16"]

[dependencies]
unreachable = "1.0"

[build-dependencies]
regex = "1"
