[package]
name = "rustler_test"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "rustler_test"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "hello_rust"
path = "src/main.rs"

[features]
default = ["rustler/tokio_rt"]
tokio_rt = ["rustler/tokio_rt"]
nif_version_2_14 = ["rustler/nif_version_2_14"]
nif_version_2_15 = ["nif_version_2_14", "rustler/nif_version_2_15"]
nif_version_2_16 = ["nif_version_2_15", "rustler/nif_version_2_16"]
nif_version_2_17 = ["nif_version_2_16", "rustler/nif_version_2_17"]

[dependencies]
rustler = { path = "../../../rustler", features = ["allocator", "tokio_rt"] }
tokio = { version = "1", features = ["time"] }
